# Internal_useCase

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  V2_DESIGN.md  V3_DESIGN.md  docker-compose.yml  orchestrator.sh  pyproject.toml  requirements.txt  run_batch.py  strategies.yaml  v2_vs_v3_comparison.txt
app/: __main__.py  cli.py  config.py  dependencies.py  logging_config.py  main.py
app/models/: batch.py  database.py  dlu.py  file_status.py  master_data.py  master_pii.py  result.py  search_result.py
app/routers/: batch.py  batch_v3.py  indexing.py  search.py
app/schemas/: batch.py  indexing.py  pii.py  search.py  search_v3.py
app/services/: batch_query_service.py  batch_service.py  batch_service_v3.py  indexing_service.py  indexing_service_v3.py  leak_detection_service.py  search_service.py  search_service_v3.py  text_extraction.py
app/utils/: confidence.py  fuzzy.py  strategy_loader.py
data/seed/: dlu_metadata.csv  (+2 more)
openspec/: config.yaml
plans/: roadmap.md  v2_spec_review.md
scripts/: compare_v2_v3.py  create_search_index.py  create_search_index_v3.py  generate_simulated_data.py  inline_verify_output.txt  orchestrator.py  pytest_out.txt  run_indexing.py  run_indexing_v3.py  seed_database.py
tests/: conftest.py  test_cli.py  test_compare_v2_v3.py  test_config.py  test_create_search_index.py  test_create_search_index_v3.py  test_dependencies.py  test_generate_simulated_data.py  test_generate_simulated_data_v2.py  test_integration.py  test_main.py  test_main_v2.py  test_run_indexing.py  test_v2_integration.py  test_v3_integration.py
(+89 files in other folders)
